--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scipts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test:pact": "cross-env CI=true react-scripts test --runInBand  --setupFiles ./pact/setup.js --setupFilesAfterEnv ./pact/jest-wrapper.js --testMatch \"**/*.test.pact.js\" ",
     "test:pct": "npx jest --testTimeout 30000 --testMatch \"**/*.pact.test.js\"",
